Restructure plugin and relocate source
Move plugin main class to new src/BlockDataExample/Main.php and remove the old src/NhanAZ/... Main class. Update plugin.yml to match the new structure. Remove CI/config/docs files (GitHub Actions, .poggit.yml, .gitignore, README, LICENSE) and composer metadata to simplify the repository layout and prepare for the revised plugin packaging.

--- a/plugin.yml
+++ b/plugin.yml
@@ -1,4 +1,8 @@
-name: BlockData_Example_Plugin
-main: NhanAZ\BlockData_Example_Plugin\Main
+name: BlockDataExample
+version: 1.0.0
 api: 5.0.0
-version: 0.0.2
+main: BlockDataExample\Main
+author: NhanAZ
+description: Example plugin demonstrating BlockData virion usage
+
+depend: []
